@@ -2,6 +2,7 @@
 - When pull fails, remove and re-clone the repo instead of bailing.
 - vim-update-bundles no longer symlinks .vim and .vimrc into $HOME.
 - Remove the dotfile_path option, it's not necessary anymore.
+- We now check for duplicate and conflicting Bundle entries.
 
 0.6     29 Jun 2011
 - Added doc/bundle-log.txt. :help bundle-log to see it.
